<resources>
    <string name="a11y_new_effect_available_indicator">New effect is available</string>
    <string name="a11y_new_effect_indicator">new effect</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_to_expire">About to expire</string>
    <string name="accessibility_add_attachment">Attach video</string>
    <string name="accessibility_add_more_contacts">Invite contact</string>
    <string name="accessibility_addto">Add to</string>
    <string name="accessibility_annotation_overlay_info_cards_drawer_dismiss">Hide cards</string>
    <string name="accessibility_annotation_overlay_promo_dismiss">Close</string>
    <string name="accessibility_annotation_overlay_promo_expand">Expand</string>
    <string name="accessibility_attachment_thumbnail">Attached video</string>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_back_button">Back</string>
    <string name="accessibility_camera_close_button">Close</string>
    <string name="accessibility_channel_banner">Channel banner</string>
    <string name="accessibility_channel_banner_camera_icon">Update channel banner</string>
    <string name="accessibility_channel_settings_edit_description">Edit description</string>
    <string name="accessibility_channel_settings_edit_family_name">Edit family name</string>
    <string name="accessibility_channel_settings_edit_given_name">Edit given name</string>
    <string name="accessibility_channel_settings_edit_name">Edit channel name</string>
    <string name="accessibility_channel_subscribe_action">Subscribe to this channel</string>
    <string name="accessibility_channel_unsubscribe_action">Unsubscribe from this channel</string>
    <string name="accessibility_chat_message_author">Author</string>
    <string name="accessibility_chat_message_video_thumbnail">Video</string>
    <string name="accessibility_clear_button">Clear</string>
    <string name="accessibility_clear_edit_text_input">Clear text</string>
    <string name="accessibility_clear_search">Clear search</string>
    <string name="accessibility_close_ad_button">Close Ad</string>
    <string name="accessibility_close_button">Close</string>
    <string name="accessibility_close_dialog">Close dialog</string>
    <string name="accessibility_close_related_video_replies">Close related video replies</string>
    <string name="accessibility_close_share_panel">Close share panel.</string>
    <string name="accessibility_closed_captions">Show closed captions menu</string>
    <string name="accessibility_collaborator_card">Collaborator</string>
    <string name="accessibility_collapse">Minimize</string>
    <string name="accessibility_connections_illustration">Illustration</string>
    <string name="accessibility_continue_watching">Continue Watching</string>
    <string name="accessibility_decrement_amount">Decrement amount</string>
    <string name="accessibility_describe_as_button">%1$s Button</string>
    <string name="accessibility_dislike_video">Dislike button</string>
    <string name="accessibility_dismiss">Dismiss</string>
    <string name="accessibility_dismiss_button">Remove suggested contact</string>
    <string name="accessibility_dismiss_chat_video">Dismiss video</string>
    <string name="accessibility_drag_handle">Drag handle</string>
    <string name="accessibility_edit_sms">Edit Message</string>
    <string name="accessibility_enter_fullscreen">Enter fullscreen</string>
    <string name="accessibility_enter_vr_mode">Enter virtual reality mode</string>
    <string name="accessibility_episode_card">Episode</string>
    <string name="accessibility_error_icon">Chat error</string>
    <string name="accessibility_error_retry">Error sending message, click to retry</string>
    <string name="accessibility_exit_fullscreen">Exit fullscreen</string>
    <string name="accessibility_expand_hats_survey">Expand survey</string>
    <string name="accessibility_expandable_arrow">Collapse/Expand button.</string>
    <string name="accessibility_fast_forward">Fast forward</string>
    <string name="accessibility_filter_view_closed">Filter effects list closed.</string>
    <string name="accessibility_filter_view_selected">%s selected</string>
    <string name="accessibility_filter_view_shown">Filter effects list shown.</string>
    <string name="accessibility_filter_view_unselected">%s unselected</string>
    <string name="accessibility_flag">Flag video</string>
    <string name="accessibility_flashlight_turned_off">Flashlight turned off</string>
    <string name="accessibility_flashlight_turned_on">Flashlight turned on</string>
    <string name="accessibility_go_to_channel">Go to channel</string>
    <string name="accessibility_go_to_video">Go to video</string>
    <string name="accessibility_header_postfix">Heading</string>
    <string name="accessibility_heart">Heart</string>
    <string name="accessibility_heart_icon_empty">Empty Heart Button</string>
    <string name="accessibility_heart_icon_full">Full Heart Button</string>
    <string name="accessibility_help_edit_text_input">More information</string>
    <string name="accessibility_hide_player_controls">Hide controls</string>
    <string name="accessibility_hide_relateds">Hide related videos</string>
    <string name="accessibility_incept_button">Open video player</string>
    <string name="accessibility_increment_amount">Increment amount</string>
    <string name="accessibility_info_cards">Show Cards</string>
    <string name="accessibility_invite">Invite Icon</string>
    <string name="accessibility_invite_button">Invite contact</string>
    <string name="accessibility_invite_more_participants">Add participants</string>
    <string name="accessibility_like_video">Like button</string>
    <string name="accessibility_list_item_drag_end">Moved item %1$d to position %2$d of %3$d</string>
    <string name="accessibility_list_item_drag_over">%1$d</string>
    <string name="accessibility_list_item_drag_start">Moving item %1$d of %2$d</string>
    <string name="accessibility_menu">Menu</string>
    <string name="accessibility_miniplayer">Open mini player</string>
    <string name="accessibility_more_actions_video">More actions</string>
    <string name="accessibility_movie_card">Movie</string>
    <string name="accessibility_multi_recipient_share_illustration">Illustration</string>
    <string name="accessibility_new_content_available">New content available</string>
    <string name="accessibility_next">Next video</string>
    <string name="accessibility_notifications_muted">Notifications are muted for this chat</string>
    <string name="accessibility_offline_button_cancel">Stop downloading</string>
    <string name="accessibility_offline_button_cannot_save">"Can't download"</string>
    <string name="accessibility_offline_button_remove_playlist">Remove downloaded playlist</string>
    <string name="accessibility_offline_button_remove_video">Remove from downloads</string>
    <string name="accessibility_offline_button_save">Download</string>
    <string name="accessibility_offline_button_sync">Sync new videos</string>
    <string name="accessibility_overflow">More options</string>
    <string name="accessibility_overflow_button">More contacts</string>
    <string name="accessibility_pause">Pause video</string>
    <string name="accessibility_play">Play video</string>
    <string name="accessibility_play_in_youtube">Play in YouTube application</string>
    <string name="accessibility_player">Expand Mini Player</string>
    <string name="accessibility_player_progress_time">%1$s of %2$s</string>
    <string name="accessibility_playlist_card">Playlist</string>
    <string name="accessibility_playlist_collaboration_settings">Go to playlist collaboration settings</string>
    <string name="accessibility_playlist_edit">Edit playlist</string>
    <string name="accessibility_playlist_play_all">Play all</string>
    <string name="accessibility_playlist_private">Private playlist</string>
    <string name="accessibility_playlist_share">Share playlist</string>
    <string name="accessibility_poll_checked_talk_back">Checked</string>
    <string name="accessibility_poll_not_checked_talk_back">Not Checked</string>
    <string name="accessibility_poll_question_talk_back">Poll question: %1$s, %2$d choices</string>
    <string name="accessibility_poll_remove_option">Remove option</string>
    <string name="accessibility_previous">Previous video</string>
    <string name="accessibility_profile_photo">Profile photo</string>
    <string name="accessibility_profile_photo_camera_icon">Update profile photo</string>
    <string name="accessibility_quality">Show video quality menu</string>
    <string name="accessibility_recording_end">Recording has ended, entering editor screen</string>
    <string name="accessibility_recording_start">Start recording</string>
    <string name="accessibility_related_screen">Related videos and playlists</string>
    <string name="accessibility_related_video_replies_video_item">Related video suggestion</string>
    <string name="accessibility_remove_attached_image">Remove attached image</string>
    <string name="accessibility_remove_attached_video">Remove attached video</string>
    <string name="accessibility_remove_attachment">Remove attachment</string>
    <string name="accessibility_remove_from_playlists">Remove from Playlist</string>
    <string name="accessibility_repeat">Repeat</string>
    <string name="accessibility_replay">Replay video</string>
    <string name="accessibility_reply_search_button">Attach video</string>
    <string name="accessibility_resend_conversation_item">Resend item</string>
    <string name="accessibility_rewind">Rewind</string>
    <string name="accessibility_save">Download</string>
    <string name="accessibility_save_to_playlists">Save to Playlists</string>
    <string name="accessibility_scrubbed_preview">Scrubbed preview</string>
    <string name="accessibility_search_cancel_button_text">Cancel search</string>
    <string name="accessibility_search_edit_suggestion">Edit suggestion %1$s</string>
    <string name="accessibility_send_button">Send reply</string>
    <string name="accessibility_send_comment_button">Send comment</string>
    <string name="accessibility_send_share">Share</string>
    <string name="accessibility_share">Share</string>
    <string name="accessibility_share_target">App</string>
    <string name="accessibility_share_video">Share video</string>
    <string name="accessibility_show_channels">Show channels</string>
    <string name="chat_reply_box_hint">Say something…</string>
</resources>