<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:elevation="8.0dip" _xmlns:android="http://schemas.android.com/apk/res/android" _xmlns:tools="http://schemas.android.com/tools" xmlns:_xmlns="xmlns"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:background="@color/chat_reply_box_shadow" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/chat_reply_box_initial_height">
        <FrameLayout android:layout_width="48.0dip" android:layout_height="48.0dip">
            <com.google.android.libraries.youtube.share.ui.ContactImageHolder android:layout_gravity="center" android:id="@id/reply_box_author" android:layout_width="@dimen/chat_message_author_avatar_size" android:layout_height="@dimen/chat_message_author_avatar_size" android:contentDescription="@string/accessibility_chat_message_author" />
        </FrameLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <FrameLayout android:layout_gravity="fill_vertical" android:id="@id/edit_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/chat_reply_box_initial_height">
                <EditText android:textSize="16.0sp" android:textColorHint="@color/chat_reply_box_hint_text" android:textColorLink="@color/quantum_googblue" android:layout_gravity="center_vertical" android:id="@id/text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/chat_reply_box_hint" android:maxLines="5" android:scrollHorizontally="false" android:inputType="textCapSentences|textMultiLine|textShortMessage" android:imeOptions="actionSend" />
            </FrameLayout>
            <FrameLayout android:id="@id/attachment" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <ImageView android:id="@id/attachment_thumbnail" android:layout_width="@dimen/video_chat_message_thumbnail_width" android:layout_height="@dimen/video_chat_message_thumbnail_height" android:contentDescription="@string/accessibility_attachment_thumbnail" />
                <ImageButton android:layout_gravity="end|center|top" android:id="@id/remove_attachment_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_remove_circle_black" android:contentDescription="@string/accessibility_remove_attachment" />
            </FrameLayout>
        </LinearLayout>
        <ImageView android:layout_gravity="top" android:id="@id/attachment_button" android:background="?selectableItemBackground" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginLeft="4.0dip" android:layout_marginTop="5.0dip" android:layout_marginBottom="-1.0dip" android:src="@drawable/ic_add_video" android:scaleType="center" android:contentDescription="@string/accessibility_add_attachment" android:layout_marginStart="4.0dip" />
        <ImageView android:layout_gravity="top" android:id="@id/send_button" android:background="?selectableItemBackground" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginLeft="4.0dip" android:layout_marginTop="4.0dip" android:layout_marginBottom="1.0dip" android:src="@drawable/ic_send_active" android:scaleType="center" android:contentDescription="@string/accessibility_send_button" android:layout_marginStart="4.0dip" />
    </LinearLayout>
</LinearLayout>